--- a/vercel.json
+++ b/vercel.json
@@ -3,14 +3,18 @@
     "name": "leaf-disease-detection",
     "builds": [
         {
-            "src": "./main.py",
+            "src": "./app.py",
             "use": "@vercel/python"
         }
     ],
     "routes": [
         {
+            "src": "/disease-detection-file",
+            "dest": "/app.py"
+        },
+        {
             "src": "/(.*)",
-            "dest": "/main.py"
+            "dest": "/index.html"
         }
     ]
 }
