--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
     "name": "leaf-disease-detection",
     "builds": [
         {
-            "src": "./app.py",
+            "src": "app.py",
             "use": "@vercel/python"
         }
     ],
@@ -13,8 +13,12 @@
             "dest": "/app.py"
         },
         {
+            "src": "/",
+            "dest": "/app.py"
+        },
+        {
             "src": "/(.*)",
-            "dest": "/index.html"
+            "dest": "/app.py"
         }
     ]
 }
